src/test/deca/context/valid/while.deca
// Description :
// test d'un while
//
// Résultats :
// ok

{
  int x = 0;
  while (x <= 1) {
    println(x);
    x = x + 1;
  }
}
